# CoinTest

./: .gitignore  Anchor.toml  Cargo.toml  MARKETING_STRATEGY.md  README.md  ai.md  package-lock.json  package.json  start_bot.bat  tsconfig.json
HORMUZ_Launch/: HOW_TO_BUY.md  README.md  TG_POSTS.md  TWEET_DRAFTS.md
app/: .env.example  .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js
app/components/: AirdropSignup.tsx  (+13 more)
bot/: .env.example  README.md  bluesky_poster.py  commands.py  config.py  discord_webhook.py  filter.py  formatter.py  intel_context.py  legal_copy.py  llm_promo.py  main.py  market_watcher.py  mastodon_poster.py  news_digest.py  oil_prices.py  ollama_client.py  onchain_watcher.py  polls.py  prelaunch_social.py  promo_messages.py  requirements.txt  rss_poller.py  ship_tracker.py  twitter_poster.py  varied_messages.py
docs/: airdrop_promo_posts.md  audit.md  audit_report.md  discovery_copy_bank.md  launch_playbook_hormuz.md  mainnet_wallet_setup.md  outreach_targets_template.csv  phase3_mainnet_credibility.md  press_kit_strait.md
outreach/: send_outreach.py  templates.py
programs/hormuz/: Cargo.toml
programs/hormuz/src/: dao.rs  errors.rs  lib.rs  prediction_market.rs  staking.rs  state.rs
scripts/: .lp_lock.json  .pool.json  .vesting.json  airdrop.ts  airdrop_list.csv  complete_strait_distribution.ts  create_pool.ts  create_token.ts  deploy_devnet.md  import_phantom_key.ts  initialize.ts  lock_lp.ts  rescue_treasury.ts  seed_liquidity.ts  setup_mainnet_hormuzliquidity.ps1  vest_team.ts
tests/: hormuz.ts
(+35 files in other folders)
