[package]
name = "hormuz"
version = "0.1.0"
description = "HORMUZ Coin - Solana program for staking and DAO governance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hormuz"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "metadata"] }
mpl-token-metadata = "4.1.2"
